[gd_scene load_steps=5 format=3 uid="uid://72n1dkboo4r3"]

[ext_resource type="PackedScene" uid="uid://dx6qipud0y83l" path="res://paddle.tscn" id="1_k33u2"]
[ext_resource type="Script" path="res://pong_game.gd" id="1_xxway"]
[ext_resource type="PackedScene" uid="uid://dghn1aw3kxbuu" path="res://end_zone.tscn" id="2_tbijf"]
[ext_resource type="PackedScene" uid="uid://dx31c1niknueu" path="res://ball.tscn" id="3_5dicw"]

[node name="PongGame" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_xxway")

[node name="PlayerPaddle" parent="." instance=ExtResource("1_k33u2")]
position = Vector2(52, 286)

[node name="ComputerPaddle" parent="." instance=ExtResource("1_k33u2")]
position = Vector2(1077, 286)

[node name="PlayerGoal" parent="." instance=ExtResource("2_tbijf")]

[node name="ComputerGoal" parent="." instance=ExtResource("2_tbijf")]
position = Vector2(1103, -3)

[node name="Ball" parent="." instance=ExtResource("3_5dicw")]
position = Vector2(570, 308)

[node name="TopBound" type="Node2D" parent="."]
scale = Vector2(1152, 10)

[node name="Area2D" type="Area2D" parent="TopBound"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TopBound/Area2D"]
polygon = PackedVector2Array(2.08165e-12, 2.08165e-12, 2.08165e-12, 1, 1, 1, 1, 2.08165e-12)

[node name="Polygon2D" type="Polygon2D" parent="TopBound"]
polygon = PackedVector2Array(2.08165e-12, 2.08165e-12, 2.08165e-12, 1, 1, 1, 1, 2.08165e-12)

[node name="BottomBound" type="Node2D" parent="."]
position = Vector2(2.08165e-12, 638)
scale = Vector2(1152, 10)

[node name="Area2D" type="Area2D" parent="BottomBound"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BottomBound/Area2D"]
polygon = PackedVector2Array(2.08165e-12, 2.08165e-12, 2.08165e-12, 1, 1, 1, 1, 2.08165e-12)

[node name="Polygon2D" type="Polygon2D" parent="BottomBound"]
polygon = PackedVector2Array(2.08165e-12, 2.08165e-12, 2.08165e-12, 1, 1, 1, 1, 2.08165e-12)

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PlayerScore" type="Label" parent="."]
offset_left = 78.0
offset_top = 35.0
offset_right = 118.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 50
text = "0
"

[node name="ComputerScore" type="Label" parent="."]
offset_left = 1037.0
offset_top = 35.0
offset_right = 1077.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 50
text = "0
"

[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
